--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 <body>
 	<header>
 		<h1>AI News</h1>
+		<button id="enable-notifications">Включить уведомления</button>
+
 	</header>
 	<div id="news-container">
 		<!-- Новости будут загружены сюда -->
